# cli-as-mcp

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  QUICK_START_FOR_AGENTS.md  README.md  mcp-config-example.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
configs/: claude-cli.json  git.json  npm.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  EXAMPLES.md  QUICKSTART.md  TEST-REPORT.md  TESTING.md  TROUBLESHOOTING.md  USAGE.md  brief.md  design-prototype.md  scouts-system-prompt.md
examples/: basic_usage.py  custom_config.py
scripts/: ccr-dummy.js  ccr-dummy.ps1
src/: server.ts
src/cli_as_mcp/: __init__.py  cli.py  cli_wrapper.py  config.py  server.py  templates.py
tests/: README.md  __init__.py  run-direct.cjs  test-mcp-server-real.js  test-mcp-server.js  test_config.py  test_templates.py  test_wrapper.py
